# robocup-at-work

./: README.md
mas_common_robotics/mas_common_robotics/: CMakeLists.txt  package.xml  test.txt
mas_common_robotics/mcr_common/mcr_algorithms/: CMakeLists.txt  package.xml  setup.py
mas_common_robotics/mcr_common/mcr_common_converters/: CMakeLists.txt  README.md  package.xml  setup.py
mas_common_robotics/mcr_common/mcr_common_converters/common/src/: motion_direction_calculation.cpp
mas_common_robotics/mcr_common/mcr_common_converters/ros/config/: LinearOffset.cfg  relative_displacement_calculator.yaml  twist_to_motion_direction_conversion.yaml
mas_common_robotics/mcr_common/mcr_common_converters/ros/docs/: pose_shifter.graphml  pose_shifter_pipeline.graphml  transform_to_pose_converter.graphml
mas_common_robotics/mcr_common/mcr_common_converters/ros/launch/: pose_shifter.launch  pose_shifter.test  pose_shifter_pipeline.test  pose_shifter_pipeline_example.launch  pose_to_transform_converter.launch  relative_displacement_calculator.launch  relative_displacement_calculator.test  static_transform_publisher_example.launch  transform_to_pose_converter.test  transform_to_pose_converter_example.launch  twist_to_motion_direction_conversion.launch
mas_common_robotics/mcr_common/mcr_common_converters/ros/scripts/: pose_shifter_node  pose_shifter_pipeline_node  pose_to_transform_converter_node  relative_displacement_calculator_node  static_transform_publisher_node  transform_to_pose_converter_node
mas_common_robotics/mcr_common/mcr_common_converters/ros/src/: twist_to_motion_direction_conversion_node.cpp
mas_common_robotics/mcr_common/mcr_common_converters/ros/test/: pose_shifter_pipeline_test.py  pose_shifter_test.py  relative_displacement_calculator_test.py  transform_to_pose_converter_test.py
mas_common_robotics/mcr_common/mcr_common_msgs/: CMakeLists.txt  package.xml
mas_common_robotics/mcr_common/mcr_dynamic_reconfigure_client/: CMakeLists.txt  package.xml  setup.py
mas_common_robotics/mcr_common/mcr_dynamic_reconfigure_client/ros/config/: TestNode.cfg  named_configurations_example.yaml  test_named_configurations.yaml
mas_common_robotics/mcr_common/mcr_dynamic_reconfigure_client/ros/launch/: dynamic_reconfigure_client.launch  dynamic_reconfigure_client.test
mas_common_robotics/mcr_common/mcr_dynamic_reconfigure_client/ros/scripts/: dynamic_reconfigure_client_node
mas_common_robotics/mcr_common/mcr_dynamic_reconfigure_client/ros/test/: test_dynamic_reconfigure_client.py
mas_common_robotics/mcr_common/mcr_pose_generation/: CMakeLists.txt  README.md  package.xml  setup.py
mas_common_robotics/mcr_common/mcr_pose_generation/common/test/: transformation_unit_test.py
mas_common_robotics/mcr_common/mcr_pose_generation/ros/config/: gripper_configuration_matrix.yaml
mas_common_robotics/mcr_common/mcr_pose_generation/ros/doc/: pose_generator.graphml
mas_common_robotics/mcr_common/mcr_pose_generation/ros/launch/: pose_generator.launch  pose_generator.test  sampling_parameter_gui.launch
mas_common_robotics/mcr_common/mcr_pose_generation/ros/scripts/: pose_generator_node  sampling_parameter_gui_node
mas_common_robotics/mcr_common/mcr_pose_generation/ros/test/: pose_generator_test.py  pose_generator_unittest.py
mas_common_robotics/mcr_common/mcr_pose_generator/: CMakeLists.txt  README.md  package.xml  setup.py
mas_common_robotics/mcr_common/mcr_pose_generator/common/test/: transformation_unit_test.py
mas_common_robotics/mcr_common/mcr_pose_generator/ros/config/: gripper_configuration_matrix.yaml
mas_common_robotics/mcr_common/mcr_pose_generator/ros/doc/: pose_generator.graphml
mas_common_robotics/mcr_common/mcr_pose_generator/ros/launch/: pose_generator.launch  pose_generator.test  pose_publisher.launch  sampling_parameter_gui.launch
mas_common_robotics/mcr_common/mcr_pose_generator/ros/scripts/: pose_generator_node  pose_publisher_node  sampling_parameter_gui_node
mas_common_robotics/mcr_common/mcr_pose_generator/ros/test/: pose_generator_test.py  pose_generator_unittest.py
mas_common_robotics/mcr_common/mcr_pose_selector/: CMakeLists.txt  package.xml  setup.py
mas_common_robotics/mcr_common/mcr_pose_selector/ros/launch/: pose_selector.launch
mas_common_robotics/mcr_common/mcr_pose_selector/ros/scripts/: pose_selector_node
mas_common_robotics/mcr_common/mcr_topic_tools/: CMakeLists.txt  nodelet_plugins.xml  package.xml  setup.py
mas_common_robotics/mcr_common/mcr_topic_tools/ros/doc/: brics_joints_to_joint_states.graphml
mas_common_robotics/mcr_common/mcr_topic_tools/ros/launch/: brics_joints_to_joint_states.test  brics_joints_to_joint_states_example.launch  topic_mux_nodelet.launch  topic_mux_standalone.launch
mas_common_robotics/mcr_common/mcr_topic_tools/ros/scripts/: brics_joints_to_joint_states_node
mas_common_robotics/mcr_common/mcr_topic_tools/ros/src/: topic_mux.cpp
mas_common_robotics/mcr_common/mcr_topic_tools/ros/test/: test_brics_joints_to_joint_states.py  test_transform_topic_utils.py
mas_common_robotics/mcr_controllers/mcr_multi_joint_forward_controller/: CMakeLists.txt  package.xml  ros_control_plugins.xml
mas_common_robotics/mcr_controllers/mcr_trajectory_controller/: CMakeLists.txt  package.xml  ros_control_plugins.xml
mas_common_robotics/mcr_controllers/mcr_twist_controller/: CMakeLists.txt  README.md  package.xml  setup.py
mas_common_robotics/mcr_controllers/mcr_twist_demultiplexer/: CMakeLists.txt  README.md  package.xml
mas_third_party_software/cvblobs/: CMakeLists.txt  Makefile.tarball  package.xml
mas_third_party_software/libsvm/: CMakeLists.txt  Makefile.tarball  package.xml
mas_third_party_software/mas_third_party_software/: CMakeLists.txt  package.xml
mas_third_party_software/mercury_planner/: CMakeLists.txt  Makefile.tarball  package.xml
mas_third_party_software/mercury_planner/doc/: README.md  manual_installation.md
mas_third_party_software/mercury_planner/patch/: actions.py  effects.py
mas_third_party_software/polyclipping/: CMakeLists.txt  Makefile.tarball  package.xml
(+1055 files in other folders)
