<?xml version="1.0"?>
<package>
  <name>cvblobs</name>
  <version>8.3.0</version>
  <description>ROS wrapped cvblobs library</description>

  <maintainer email="frederik.hegger@h-brs.de">Frederik Hegger</maintainer>
  <maintainer email="sven.schneider@h-brs.de">Sven Schneider</maintainer>
  <maintainer email="matthias.fueller@h-brs.de">Matthias Füller</maintainer>
  <maintainer email="rhama.dwiputra@h-brs.de">Rhama Dwiputra</maintainer>
  <maintainer email="nico.hochgeschwender@h-brs.de">Nico Hochgeschwender</maintainer>

  <license>GPLv2</license>

  <url type="website">http://opencv.willowgarage.com/wiki/cvBlobsLib</url>

  <author email="xyz@xyz.com">Ricard Borràs</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>mk</build_depend>

</package>
