<?xml version="1.0"?>
<package>
  <name>libsvm</name>
  <version>3.17.0</version>
  <description>ROS wrapped libsvm library</description>
 
  <maintainer email="frederik.hegger@h-brs.de">Frederik Hegger</maintainer>
  <maintainer email="sven.schneider@h-brs.de">Sven Schneider</maintainer>
  <maintainer email="matthias.fueller@h-brs.de">Matthias Füller</maintainer>
  <maintainer email="rhama.dwiputra@h-brs.de">Rhama Dwiputra</maintainer>
  <maintainer email="nico.hochgeschwender@h-brs.de">Nico Hochgeschwender</maintainer>
  
  <license>modifiedBSD</license>

  <url type="website">http://www.csie.ntu.edu.tw/~cjlin/libsvm/</url>

  <author email="xyz@xyz.com">Chih-Chung Chang</author>
  <author email="xyz@xyz.com">Chih-Jen Lin</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mk</build_depend>
  
</package>