<?xml version="1.0"?>
<package>
  <name>mas_third_party_software</name>
  <version>0.0.1</version>
  <description>3rd party packages.</description>

  <license>GPLv3</license>

  <author email="sven.schneider@h-brs.de">Sven Schneider</author>
  <maintainer email="sven.schneider@h-brs.de">Sven Schneider</maintainer>
  <maintainer email="frederik.hegger@h-brs.de">Frederik Hegger</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
