<?xml version="1.0"?>
<package>
  <name>polyclipping</name>
  <version>4.10.0</version>
  <description>ROS wrapped polyclipping library</description>

  <maintainer email="frederik.hegger@h-brs.de">Frederik Hegger</maintainer>
  <maintainer email="sven.schneider@h-brs.de">Sven Schneider</maintainer>
  <maintainer email="matthias.fueller@h-brs.de">Matthias Füller</maintainer>
  <maintainer email="rhama.dwiputra@h-brs.de">Rhama Dwiputra</maintainer>
  <maintainer email="nico.hochgeschwender@h-brs.de">Nico Hochgeschwender</maintainer>

  <license>Boost Software License</license>

  <url type="website">http://sourceforge.net/projects/polyclipping/</url>

  <author email="xyz@xyz.com">Angus Johnson</author> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mk</build_depend>
  
</package>