<?xml version="1.0"?>
<package>
  <name>mcr_algorithms</name>
  <version>0.0.0</version>
  <description>The mcr_algorithms package</description>

  <maintainer email="frederik.hegger@h-brs.de">Frederik Hegger</maintainer>

  <license>GPLv3</license>

  <author email="frederik.hegger@h-brs.de">Frederik Hegger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>mcr_perception_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>mcr_perception_msgs</run_depend>

</package>
