<?xml version="1.0"?>
<package>
  <name>mcr_common_converters</name>
  <version>0.1.0</version>
  <description>
    A package to convert different messages
    (e.g. a TF to a PoseStamped message).
  </description>
  <license>GPLv3</license>

  <maintainer email="jose.sanchez.loza@gmail.com">Jose Sanchez</maintainer>
  <maintainer email="frederik.hegger@h-brs.de">Frederik Hegger</maintainer>
  
  <author email="jose.sanchez.loza@gmail.com">Jose Sanchez</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>mcr_manipulation_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roslint</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>mcr_manipulation_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>

</package>
