<?xml version="1.0"?>
<package>
  <name>mcr_common_msgs</name>
  <version>0.1.0</version>
  <description>
    Messages and services that are robot independent.
  </description>
  <license>GPLv3</license>

  <maintainer email="jose.sanchez.loza@gmail.com">Jose Sanchez</maintainer>
  <author email="jose.sanchez.loza@gmail.com">Jose Sanchez</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
</package>