<?xml version="1.0"?>
<package>
  <name>mcr_dynamic_reconfigure_client</name>
  <version>0.1.0</version>
  <description>
      Contains node to enable changing dynamic reconfigure parameters of sets of nodes during runtime
  </description>

  <maintainer email="santosh.thoduka@smail.inf.h-brs.de">Santosh Thoduka</maintainer>

  <author email="santosh.thoduka@smail.inf.h-brs.de">Santosh Thoduka</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>

</package>
