<?xml version="1.0"?>
<package>
  <name>mcr_pose_generation</name>
  <version>0.1.0</version>
  <description>
  A package that contains components to generate a list of poses around a target pose.
  </description>

  <license>GPLv3</license>

  <maintainer email="jose.sanchez.loza@gmail.com">Jose Sanchez</maintainer>
  <author email="jose.sanchez.loza@gmail.com">Jose Sanchez</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>mcr_manipulation_msgs</run_depend>
  <run_depend>tf</run_depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>
</package>