<?xml version="1.0"?>
<package>
  <name>mcr_pose_selector</name>
  <version>0.1.0</version>
  <description>
      This component provides the functionality to store list of input poses
      and publish one by one on each trigger.
  </description>

  <maintainer email="shehzad.ahmed@smail.inf.h-brs.de">Shehzad Ahmed</maintainer>

  <author email="shehzad.ahmed@smail.inf.h-brs.de">Shehzad Ahmed</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslint</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <test_depend>roslaunch</test_depend>

</package>
