<?xml version="1.0"?>
<package>
  <name>mcr_topic_tools</name>
  <version>0.1.0</version>
  <description>
      Copy of the ROS package: https://github.com/ros/ros_comm/tree/indigo-devel/tools/topic_tools
  </description>

  <maintainer email="santosh.thoduka@smail.inf.h-brs.de">Santosh Thoduka</maintainer>
  <maintainer email="jose.sanchez.loza@gmail.com">Jose Sanchez</maintainer>
  <maintainer email="shehzad.ahmed@smail.inf.h-brs.de">Shehzad Ahmed</maintainer>

  <author email="santosh.thoduka@smail.inf.h-brs.de">Santosh Thoduka</author>
  <author email="jose.sanchez.loza@gmail.com">Jose Sanchez</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>topic_tools</build_depend>
  <build_depend>roslint</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>brics_actuator</run_depend>
  <run_depend>nodelet</run_depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>

</package>
