<?xml version="1.0"?>
<package>
  <name>mcr_multi_joint_forward_controller</name>
  <version>0.1.0</version>
  <description>
    A controller that forwards joint values to a hardware interface.
  </description>
  <license>GPLv3</license>

  <maintainer email="sven.schneider@h-brs.de">Sven Schneider</maintainer>
  <author email="sven.schneider@h-brs.de">Sven Schneider</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>brics_actuator</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>brics_actuator</run_depend>

  <test_depend>rostest</test_depend>

  <export>
    <controller_interface plugin="${prefix}/ros_control_plugins.xml"/>
  </export>
</package>
