<?xml version="1.0"?>
<package>
  <name>mcr_trajectory_controller</name>
  <version>0.0.1</version>
  <description>
    Trajectory controllers implemented as plugins for the ros_control framework.
  </description>
  <license>BSD</license>

  <maintainer email="sven.schneider@h-brs.de">Sven Schneider</maintainer>
  <author email="sven.schneider@h-brs.de">Sven Schneider</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>controller_interface</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>joint_trajectory_controller</build_depend>
  <build_depend>urdf</build_depend>

  <run_depend>controller_interface</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>urdf</run_depend>

  <export>
    <controller_interface plugin="${prefix}/ros_control_plugins.xml"/>
  </export>
</package>